# rust-loan-simulation-api

./: Cargo.toml  README.md  rust-load-simulation-api.http
src/: main.rs  resource.rs
src/config/: settings.json
src/resource/: service.rs  util.rs
src/resource/service/: db.rs  handler.rs  hub.rs
src/resource/struct/: model.rs
src/resource/util/: calculator.rs  validator.rs
