[package]
name = "hackcaixa2023"
version = "0.1.0"
edition = "2021"
authors = ["Murilo Moraes"]
description = "API Simulador de requisições de empréstimo. Projeto de entrada para o HackCaixa 2023"
readme = "README.md"
repository = "https://github.com/kliff-k/rust-loan-simulation-api"

[dependencies]
axum = "0.6.18"
azeventhubs = "0.1.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tiberius = "0.12.2"
tiberius-derive = "0.0.2"
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["compat"] }
validator = { version = "0.16.0", features = ["derive"] }
