[package]
name = "hackcaixa2023"
version = "0.1.0"
edition = "2021"
authors = ["Murilo Moraes"]
description = "API Simulador de requisições de empréstimo. Projeto de entrada para o HackCaixa 2023"
readme = "README.md"
repository = "https://github.com/kliff-k/rust-loan-simulation-api"

[dependencies]
axum = "0.8.4"
azeventhubs = "0.20.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tiberius = "0.12.3"
tiberius-derive = "0.0.2"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["compat"] }
validator = { version = "0.20.0", features = ["derive"] }
time = "0.3.41"
